# RGBD-IMU

./: .gitignore  CMakeLists.txt  README.md  log.txt
include/: AsyncSerial.h  OniReader.h  Oni_IMU.h
src/: OfflineRecord.cpp  OniReader.cpp  Oni_IMU.cpp  OnlineRecord.cpp  OnlineRecord_onlyFrame.cpp  main.cpp
